# memg-core

./: .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  BUG_REPORT_KuzuInterface_neighbors.md  CI-DOCKER-README.md  COMPREHENSIVE_PERFORMANCE_REPORT.md  Dockerfile  Dockerfile.ci  Dockerfile.ci-fast  ENGINEERING_SCAFFOLDING_REPORT.md  HARDENING_COMPLETE.md  IMPLEMENTATION_RECOMMENDATIONS.md  LIMITATIONS_AND_KNOWN_ISSUES.md  MEMG_CORE_ROUND_OBJECTIVES.md  MEMG_CORE_STATUS_AND_ROADMAP.md  MIGRATION_HARDENING.md  README.md  README_TEST_EVAL.md  UPCOMMING_FEATURES.md  YAML_ENFORCEMENT_PLAN.md  YAML_SCHEMA_MIGRATION_TODO.md  build.sh  clean-ci-docker.sh  combine_core_files.py  concat_docs.py  dev-ci-fast.sh  dev-ci-shell.sh  docker-compose.ci.yml  docker-compose.fast.yml  docker-compose.yml  env.example  example.env  files_to_stash_report.md  index.html  migrate_to_new_structure.py  objects.inv  pyproject.toml  remove_comments.py  requirements-dev.txt  (+13 more)
.github/workflows/: ci.yml  docs.yml  workflow.yml
_temp_templates_for_future_use/: README.md
_temp_templates_for_future_use/old_templates/: base.py
changelog/: index.html
config/: DEPLOYMENT_GUIDE.md  README.md  SCHEMA_COMPARISON.md  core.dev_tools.yaml  core.memo.yaml  core.minimal.updated.yaml  core.minimal.yaml  core.test.yaml  software_dev.yaml
doc/: CORE_AND_YAML_REGISTRY.md  MEMG_CORE_IMPLEMENTATION_BLUEPRINT.md
dockerfiles/: Dockerfile.mcp  README.md  docker-compose.yml
docs/: MEMG_CORE_COMPLETE_DOCUMENTATION.md  usage.md
docs/memg_core/: README.md  SYSTEM_OVERVIEW.md
docs/memg_core/api/: public.md
docs/memg_core/core/: config.md  exceptions.md  indexing.md  logging.md  models.md  yaml_translator.md
docs/memg_core/core/interfaces/: embedder.md  kuzu.md  qdrant.md
docs/memg_core/core/pipeline/: indexer.md  retrieval.md
docs/memg_core/plugins/: yaml_schema.md
docs/memg_core/showcase/: retriever.md
docs/memg_core/showcase/examples/: simple_demo.md
docs/memg_core/system/: info.md
docs/memg_core/utils/: hrid.md
docs/reference/: api.md
experiments/: MEMG_CORE_KNOWLEDGE_GUIDE.md
experiments/adk/: .gitignore  README.md  requirements.txt
experiments/adk/personal_assistant/: README.md  agent.py  env.example
experiments/adk/personal_assistant/agent_tools/: memory.py  personal_assistant.yaml
experiments/mcp/: Dockerfile  Dockerfile.no-mount  README.md  cli.sh  docker-compose.yml  example.env  mcp_server.py  memg_core-0.7.4.dev9-py3-none-any.whl  requirements_mcp.txt  server.py  yaml_docstring_helper.py
experiments/mcp/examples/: software_developer.yaml
integration/mcp/: README.md  mcp_server.py  mcp_server_core.py  mcp_tools_core.py
integrations/mcp/: Dockerfile  README.md  docker-compose.yml  example.env  mcp_server.py
integrations/mcpp/: build_and_run.sh  docker-compose.yml  example.env  mcp_server.py
mcp/: .env  Dockerfile  Dockerfile.local.mcp  Dockerfile.mcp  README.md  build_and_run.sh  docker-compose.local.yml  docker-compose.yml  mcp_server.py  requirements_mcp.txt
mcpp/: README.md  build_and_run.sh  docker-compose.yml
reference/api/: index.html
scripts/: README.md  evaluate_memg.py  fastai_example.py  fastapi_server.py  test_server.py
search/: search_index.json
src/memg_core/: __init__.py  version.py
src/memg_core/api/: public.py  server.py
src/memg_core/application/: __init__.py  memory.py
src/memg_core/core/: config.py  indexing.py  models.py  types.py  yaml_translator.py
src/memg_core/core/_defaults/: __init__.py  entities.min.yaml
src/memg_core/core/interfaces/: embedder.py  kuzu.py  qdrant.py
src/memg_core/core/pipeline/: indexer.py  retrieval.py
src/memg_core/plugins/: yaml_schema.py
src/memg_core/policies/: indexing.py
src/memg_core/processing/: memory_retriever.py
src/memg_core/qdrant/: interface.py
src/memg_core/showcase/: __init__.py  retriever.py
src/memg_core/system/: info.py
src/memg_core/utils/: __init__.py  db_clients.py  hrid.py  hrid_tracker.py  scoring.py
src/memory_system/: config.py  exceptions.py  logging_config.py  sync_wrapper.py  template_init.py  version.py
src/memory_system/kuzu_graph/: interface.py
src/memory_system/models/: __init__.py  api.py  core.py  extraction.py  template_models.py
src/memory_system/processing/: conversation_context.py  memory_processor.py  memory_retriever.py  unified_memory_processor.py
src/memory_system/qdrant/: interface.py
src/memory_system/templates/: base.py  default.py  registry.py
src/memory_system/utils/: genai.py  prompts.py  schema_generator.py  schemas.py  unified_schemas.py  yaml_schema.py
src/memory_system/validation/: __init__.py  graph_validator.py  pipeline_validator.py  schema_validator.py  standalone_validator.py
tests/: conftest.py  test_basic.py  test_e2e_validation.py  test_entity_standardization.py  test_performance_benchmarks.py  test_system_ready.py  test_user_isolation.py
tests/adapter/: test_kuzu_interface.py  test_qdrant_interface.py
tests/api/: test_delete_memory.py  test_fastapi_server.py  test_public_api.py
tests/e2e/: test_real_fastembed.py
tests/edge_cases/: test_edge_cases.py
tests/integration/: test_integration.py
tests/lifecycle/: test_memory_lifecycle.py
tests/pipeline/: test_indexer.py  test_retrieval.py
tests/unit/: test_hrid_storage_initialization.py  test_indexing.py  test_models.py  test_new_features.py  test_numeric_types.py  test_yaml_schema.py
tests/unit_temp/: test_first_four.py
usage/: index.html
(+9 files in other folders)
